# ComputerGraphicsProject

./: .gitignore  CHANGELOG.md  CMakeLists.txt  REQUIREMENTS.txt  documentation.md
config/: DefaultConfiguration.json
googletest/googletest/: CMakeCache.txt
lib/Engine/BasicClasses/AllBasicClasses/: AllBasicClasses.cpp  AllBasicClasses.h
lib/Engine/BasicClasses/Canvas/: Canvas.cpp  Canvas.h
lib/Engine/BasicClasses/Configuration/: Configuration.cpp  Configuration.h
lib/Engine/BasicClasses/EntitiesList/: EntitiesList.cpp  EntitiesList.h
lib/Engine/BasicClasses/Entity/: Entity.cpp  Entity.h
lib/Engine/BasicClasses/EventSystem/: EventSystem.cpp  EventSystem.h
lib/Engine/BasicClasses/Game/: Game.cpp  Game.h
lib/Engine/BasicClasses/Game/Camera/: Camera.cpp
lib/Engine/BasicClasses/Game/Console/: Console.cpp  Console.h
lib/Engine/BasicClasses/Game/GameEntity/: GameEntity.cpp
lib/Engine/BasicClasses/Game/HyperEllipsoid/: HyperEllipsoid.cpp  HyperEllipsoid.h
lib/Engine/BasicClasses/Game/HyperPlane/: HyperPlane.cpp  HyperPlane.h
lib/Engine/BasicClasses/Game/Object/: Object.cpp
lib/Engine/BasicClasses/Identifier/: Identifier.cpp  Identifier.h
lib/Engine/BasicClasses/Ray/: Ray.cpp  Ray.h
lib/Exceptions/EngineExceptions/: EngineException.cpp  EngineException.h
lib/Exceptions/MathExceptions/: MathException.cpp  MathException.h
lib/Math/Accuracy/: Accuracy.cpp  Accuracy.h
lib/Math/AllMath/: AllMath.cpp  AllMath.h
lib/Math/CoordinateSystem/: CoordinateSystem.cpp  CoordinateSystem.h
lib/Math/Functions/: Functions.cpp  Functions.h
lib/Math/Matrix/: Matrix.cpp  Matrix.h
lib/Math/Point/: Point.cpp  Point.h
lib/Math/Vector/: Vector.cpp  Vector.h
lib/Math/VectorSpace/: VectorSpace.cpp  VectorSpace.h
src/: Main.cpp
tests/UnitTests/: EngineTests.cpp  EngineTests_MS.cpp  GameTests.cpp  MathTests.cpp
